--- a/changesBrowser.html
+++ b/changesBrowser.html
@@ -10,7 +10,7 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/favicon.ico" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -51,9 +51,9 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="portfolio.html">Enhancements</a></li>
                     <li><a href="criticBrowser.html">Critic Browser</a></li>
                     <li><a href="changesBrowser.html">Changes Browser</a></li>
-                    <li><a href="portfolio.html">Enhancements</a></li>
                     <li><a href="team.html">Team</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -85,7 +85,7 @@
             <div class="container">
 
                 <div class="row">
-                    <div class="col-md-12 d-flex align-items-stretch" data-aos="fade-up">
+                    <div class="col-md-12 align-items-stretch" data-aos="fade-up">
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="#">1. How to open Changes Browser from Nautilius </a></h5>
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-12 d-flex align-items-stretch" data-aos="fade-up">
+                    <div class="col-md-12 align-items-stretch" data-aos="fade-up">
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="#">2. How to open Changes Browser from Critic Browser</a></h5>
@@ -115,7 +115,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-12 d-flex align-items-stretch" data-aos="fade-up">
+                    <div class="col-md-12 align-items-stretch" data-aos="fade-up">
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="#">3. Selecting a diff view to show changes before transform</a></h5>
