--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="portfolio.html">Enhancements</a></li>
                     <li><a href="criticBrowser.html">Critic Browser</a></li>
                     <li><a href="changesBrowser.html">Changes Browser</a></li>
-                    <li><a href="portfolio.html">Enhancements</a></li>
                     <li><a href="team.html">Team</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -100,7 +100,7 @@
                 <p>In the initial proposal, the list of project’s goals were:</p>
             </div>
 
-            <div class="row" data-aos="fade-up">
+            <div class="row">
                 <div class="col-md-12 pt-4">
 
                     <ul>
@@ -118,13 +118,13 @@
             <!-- ======== Changes to the Proposal =======-->
             <div class="section-title">
                 <h2>Changes to the Proposal</h2>
-                <p data-aos="fade-up">
+                <p>
                     <a href="#" onClick="return false;"><span
                                 title="CriticBrowser is a graphical tool that allows developers to select a list of software packages and a list of quality rules This resulting on a new list of critiques that broke the selected rules.">CriticBrowser</span>
                         </a> uses a deprecated version of <a href="https://github.com/pharo-spec/Spec" target="_blank"><span
                                 title="Spec is a framework in Pharo for describing user interfaces">Spec</span></a>. Therefore, implementing the new enhancements directly was not feasible without first migrating the CriticBrowser to the Spec2 version.
                     I created my own repository to do the migrations as Pharo10 was in release at the moment;  Accordingly this, 
-                    the last project was replaced by CriticBrowser migration. After these changes, the rest of project goals was done.
+                    the last project goal was replaced by CriticBrowser migration. After these changes, the rest of project goals was done.
                 </p>
             </div>
             <!-- End Changes to the Proposal -->
@@ -249,7 +249,7 @@
                             <p>
                                 I've improved the Changes Browser view. This view is called when a critique has the 
                                 "automatically resolve this issue" option. The new version has the option to show the changes
-                                in unified view and split view.
+                                in <a href="https://github.com/Lin777/UnifiedVersions" target="_blank">unified view</a> and split view.
                             </p>
                             <hr>
                             <div class="col-lg-12 col-md-12 portfolio portfolio-wrap filter-app">
@@ -324,7 +324,7 @@
             <div class="container">
                 <div class="section-title">
                     <h2>Conclusion</h2>
-                    <p data-aos="fade-up">
+                    <p>
                         In short, this summer was focused on fixing bugs, updating interfaces and adding new features
                          for the Critic Browser and Changes Browser. These changes will help Pharo developers to not
                           have to inspect method by method to see if there are critiques in it and fix them. In addition,
@@ -332,7 +332,7 @@
                            Nevertheless, there are still quite a few things pending that I hope to work on.
                     </p>
                     <br>
-                    <p data-aos="fade-up">
+                    <p>
                         I have also considerably improved my knowledge of describing user interfaces with Spec
                          and defining quality rules with Renraku. Also, I feel much more comfortable
                           programming in Pharo.
@@ -346,7 +346,7 @@
             <div class="container">
                 <div class="section-title">
                     <h2>After GSoC'21</h2>
-                    <p data-aos="fade-up">
+                    <p>
                         Critiques, rules, and interfaces are a big area that are actively developed and maintained. 
                         I plan on continuing to contribute and learn of the Pharo projects, and hope to be an
                          active member of the open source community.
