--- a/team.html
+++ b/team.html
@@ -51,9 +51,9 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="portfolio.html">Enhancements</a></li>
                     <li><a href="criticBrowser.html">Critic Browser</a></li>
                     <li><a href="changesBrowser.html">Changes Browser</a></li>
-                    <li><a href="portfolio.html">Enhancements</a></li>
                     <li><a href="team.html">Team</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -173,20 +173,22 @@
              <div class="container">
                 <div class="section-title">
                     <h2>Acknowledgements</h2>
-                    <p data-aos="fade-up">
+                    <p>
                         I wanna thank my incredible mentors: Evelyn Cusi, Nour Jihene  and Juan Pablo Sandoval. 
                         Thanks for your immense knowledge, feedback, enthusiasm and for the time that was put into the project and myself.
                     </p>   
                     <br>
-                    <p data-aos="fade-up">
-                        Thanks to all in the active Pharo community for helping me with my doubts in discord;
+                    <p>
+                        Thanks to all in the active  <a href="https://pharo.org/" target="_blank">Pharo community</a> for helping me with my doubts
+                         in   <a href="https://discord.gg/QewZMZa" target="_blank">discord</a>;
                          Specially to Sebastian Jordan, Daniel Aparicio and Markus Denker since they helped me at the 
                          beginning and throughout the progress in the project. I really appreciate your help.
                     </p>
                     <br>
-                    <p data-aos="fade-up">
-                        Finally I'd like to thank the GSoC staff and Google for the opportunity in being part of 
-                        this program this year. I really enjoyed and learned a lot this coding summer! Thank you a lot!
+                    <p>
+                        Finally I'd like to thank the <a href="https://summerofcode.withgoogle.com/" target="_blank">GSoC staff</a> and
+                        <a href="https://www.google.com/" target="_blank">Google</a> for the opportunity in being part of 
+                        this program this year. I really enjoyed and learned a lot this coding summer! Thank you!
                     </p>
                 </div>
             </div>
