--- a/team.html
+++ b/team.html
@@ -93,10 +93,10 @@
                             <div class="member-img">
                                 <img src="assets/img/team/AlePic.jpg" class="img-fluid" alt="">
                                 <div class="social">
-                                    <a href=""><i class="bi bi-twitter"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
+                                    <a href="https://github.com/AleCossioCh"><i class="bi bi-github"></i></a>
+                                    <a href="https://www.facebook.com/ale.cossiochavalier/"><i class="bi bi-facebook"></i></a>
+                                    <a href="https://www.instagram.com/alecossioch/"><i class="bi bi-instagram"></i></a>
+                                    <a href="https://www.linkedin.com/in/alejandra-cossio-chavalier/"><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
                             <div class="member-info">
@@ -113,7 +113,7 @@
                             <div class="member-img">
                                 <img src="assets/img/team/EvelynPic.jpg" class="img-fluid" alt="">
                                 <div class="social">
-                                    <a href=""><i class="bi bi-twitter"></i></a>
+                                    <a href=""><i class="bi bi-github"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
                                     <a href=""><i class="bi bi-instagram"></i></a>
                                     <a href=""><i class="bi bi-linkedin"></i></a>
@@ -132,7 +132,7 @@
                             <div class="member-img">
                                 <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
                                 <div class="social">
-                                    <a href=""><i class="bi bi-twitter"></i></a>
+                                    <a href=""><i class="bi bi-github"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
                                     <a href=""><i class="bi bi-instagram"></i></a>
                                     <a href=""><i class="bi bi-linkedin"></i></a>
@@ -152,7 +152,7 @@
                             <div class="member-img">
                                 <img src="assets/img/team/JuampiPic.jpg" class="img-fluid" alt="">
                                 <div class="social">
-                                    <a href=""><i class="bi bi-twitter"></i></a>
+                                    <a href=""><i class="bi bi-github"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
                                     <a href=""><i class="bi bi-instagram"></i></a>
                                     <a href=""><i class="bi bi-linkedin"></i></a>
