--- a/criticBrowser.html
+++ b/criticBrowser.html
@@ -100,9 +100,8 @@
                                         <div class="row">
                                           <div class="col-4">
                                                 <div class="embed-responsive embed-responsive-16by9 col-xs-12 text-center">
-                                                    <iframe width="100%" height="300px" src="https://youtu.be/bZStTO22VTY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                    <iframe width="100%" height="300px" src="https://www.youtube.com/embed/bZStTO22VTY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                                 </div>
-                                            
                                           </div>
                                           <div class="col-4">
                                             
