--- a/criticBrowser.html
+++ b/criticBrowser.html
@@ -132,7 +132,7 @@
                                     <div class='col-sm-2'></div>
                                     <div class='col-sm-8'>
                                         <div class="embed-responsive embed-responsive-16by9 col-xs-12 text-center">
-                                            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/nkXGohB02V0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/AmSSVDJSCIY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                         </div>
                                         
                                     </div>
@@ -153,7 +153,7 @@
                                     <div class='col-sm-2'></div>
                                     <div class='col-sm-8'>
                                         <div class="embed-responsive embed-responsive-16by9 col-xs-12 text-center">
-                                            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/nkXGohB02V0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/WQVZvQ-C7nQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
