update videos for changes browser

--- a/criticBrowser.html
+++ b/criticBrowser.html
@@ -147,8 +147,8 @@
                                 </a></h5>
                                 <p class="card-text">There are three options to select on a critique</p>
                                 <p class="card-text">① Mark as wrong: If the selected critique is a false positive, mark as wrong it will delete the critique from the cache and it will be no more displayed.</p>
-                                <p class="card-text">② Transform: If the selected critique has the transform option, transform it will resolve automatically the critique.</p>
-                                <p class="card-text">③ Mark as To-Do: this option will mark the critique as a To-Do critique, as a reminder that it's necessary to fix later.</p>
+                                <p class="card-text">② Mark as To-Do: this option will mark the critique as a To-Do critique, as a reminder that it's necessary to fix later. </p>
+                                <p class="card-text">③ Transform: If the selected critique has the transform option, transform it will resolve automatically the critique. See  <a href="changesBrowser.html" target="_blank"> Changes Browser section</a>.  </p>
                                 <div class='row'>
                                     <div class='col-sm-2'></div>
                                     <div class='col-sm-8'>
