--- a/changesBrowser.html
+++ b/changesBrowser.html
@@ -88,12 +88,12 @@
                     <div class="col-md-12 align-items-stretch" data-aos="fade-up">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="#">1. How to open Changes Browser from Nautilius </a></h5>
+                                <h5 class="card-title"><a href="#">1. How to open Changes Browser from Nautilus </a></h5>
                                 <div class='row'>
                                     <div class='col-sm-2'></div>
                                     <div class='col-sm-8'>
                                         <div class="embed-responsive embed-responsive-16by9 col-xs-12 text-center">
-                                            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/nkXGohB02V0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/JslJ_eWHX74" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
@@ -108,7 +108,7 @@
                                     <div class='col-sm-2'></div>
                                     <div class='col-sm-8'>
                                         <div class="embed-responsive embed-responsive-16by9 col-xs-12 text-center">
-                                            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/nkXGohB02V0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/byaQ2QeRLhs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
@@ -123,7 +123,7 @@
                                     <div class='col-sm-2'></div>
                                     <div class='col-sm-8'>
                                         <div class="embed-responsive embed-responsive-16by9 col-xs-12 text-center">
-                                            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/nkXGohB02V0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/HhjIbup_NBU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
