--- a/team.html
+++ b/team.html
@@ -112,10 +112,9 @@
                             <div class="member-img">
                                 <img src="assets/img/team/EvelynPic.jpg" class="img-fluid" alt="">
                                 <div class="social">
-                                    <a href=""><i class="bi bi-github"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
+                                    <a href=" https://github.com/Lin777"><i class="bi bi-github"></i></a>
+                                    <a href=" https://es-la.facebook.com/evelyn.cusilopez"><i class="bi bi-facebook"></i></a>
+                                    <a href="https://bo.linkedin.com/in/evelyn-cusi-lopez"><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
                             <div class="member-info">
