--- a/changesBrowser.html
+++ b/changesBrowser.html
@@ -88,12 +88,26 @@
                     <div class="col-md-12 align-items-stretch" data-aos="fade-up">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="#">1. How to open Changes Browser from Nautilus </a></h5>
+                                <h5 class="card-title"><a href="#">1. How to open Changes Browser</a></h5>
+                                <p class="card-text">There are two ways to open Critic Browser: </p>
+                                <p class="card-text">① Open from from Nautilus. 
+                                     </p>
+                                <p class="card-text">② Open from Critic Browser.</p>
                                 <div class='row'>
-                                    <div class='col-sm-2'></div>
-                                    <div class='col-sm-8'>
-                                        <div class="embed-responsive embed-responsive-16by9 col-xs-12 text-center">
-                                            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/JslJ_eWHX74" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <div class="container-fluid">
+                                        <div class="row">
+                                          <div class="col-xs-12 col-sm-6 col-md-6">
+                                                <div class="embed-responsive embed-responsive-16by9 col-xs-12 text-center">
+                                                    <iframe width="100%" height="300px" src="https://www.youtube.com/embed/JslJ_eWHX74" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                </div>
+                                          </div>
+                                          <div class="col-xs-12 col-sm-6 col-md-6">
+                                            
+                                                <div class="embed-responsive embed-responsive-16by9 col-xs-12 text-center">
+                                                    <iframe width="100%" height="300px" src="https://www.youtube.com/embed/byaQ2QeRLhs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                </div>
+                                          
+                                          </div>
                                         </div>
                                     </div>
                                 </div>
@@ -103,22 +117,7 @@
                     <div class="col-md-12 align-items-stretch" data-aos="fade-up">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="#">2. How to open Changes Browser from Critic Browser</a></h5>
-                                <div class='row'>
-                                    <div class='col-sm-2'></div>
-                                    <div class='col-sm-8'>
-                                        <div class="embed-responsive embed-responsive-16by9 col-xs-12 text-center">
-                                            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/byaQ2QeRLhs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-12 align-items-stretch" data-aos="fade-up">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title"><a href="#">3. Selecting a diff view to show changes before transform</a></h5>
+                                <h5 class="card-title"><a href="#">2. Selecting a diff view to show changes before transform</a></h5>
                                 <div class='row'>
                                     <div class='col-sm-2'></div>
                                     <div class='col-sm-8'>
