--- a/changesBrowser.html
+++ b/changesBrowser.html
@@ -89,8 +89,8 @@
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="#">1. How to open Changes Browser</a></h5>
-                                <p class="card-text">There are two ways to open Critic Browser: </p>
-                                <p class="card-text">① Open from from Nautilus. 
+                                <p class="card-text">There are two ways to open Changes Browser: </p>
+                                <p class="card-text">① Open from Nautilus. 
                                      </p>
                                 <p class="card-text">② Open from Critic Browser.</p>
                                 <div class='row'>
