--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         </a> uses a deprecated version of <a href="https://github.com/pharo-spec/Spec" target="_blank"><span
                                 title="Spec is a framework in Pharo for describing user interfaces">Spec</span></a>. Therefore, implementing the new enhancements directly was not feasible without first migrating the CriticBrowser to the Spec2 version.
                     I created my own repository to do the migrations as Pharo10 was in release at the moment; Because of this, 
-                    the last project goal was replaced by CriticBrowser migration. After these changes, the rest of project goals was done.
+                    the last project goal was replaced by CriticBrowser migration. After these changes, the rest of project goals were done.
                 </p>
             </div>
             <!-- End Changes to the Proposal -->
@@ -184,7 +184,7 @@
                     <div class="timeline-panel">
                         <div class="timeline-heading">
                             <h4 class="timeline-title">Work package 3 — Enhancing code critiques global browser</h4>
-                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> Updating ui for selecting packages and rules</small>
+                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> Updating UI for selecting packages and rules</small>
                         </p>
                         </div>
                         <div class="timeline-body">
