--- a/team.html
+++ b/team.html
@@ -128,11 +128,11 @@
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
                         <div class="member">
                             <div class="member-img">
-                                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                                <img src="assets/img/team/NourPic.jpeg" class="img-fluid" alt="">
                                 <div class="social">
-                                    <a href=""><i class="bi bi-github"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
+                                    <a href="https://github.com/NourDjihan"><i class="bi bi-github"></i></a>
+                                    <a href="https://www.facebook.com/NourJihene.Agouf/"><i class="bi bi-facebook"></i></a>
+                                    <a href="https://www.linkedin.com/in/nour-jihene-agouf-0966b0215/"><i class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
                             <div class="member-info">
@@ -177,7 +177,7 @@
                     <p>
                         Thanks to all in the active  <a href="https://pharo.org/" target="_blank">Pharo community</a> for helping me with my doubts
                          in   <a href="https://discord.gg/QewZMZa" target="_blank">discord</a>;
-                         Specially to Sebastian Jordan, Daniel Aparicio and Markus Denker since they helped me at the 
+                         Specially to Sebastian Jordan, Daniel Aparicio, Andreina Cota, and Markus Denker since they helped me at the 
                          beginning and throughout the progress in the project. I really appreciate your help.
                     </p>
                     <br>
