--- a/criticBrowser.html
+++ b/criticBrowser.html
@@ -52,8 +52,8 @@
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Enhancements</a></li>
-                    <li><a href="criticBrowser.html">Critic Browser</a></li>
-                    <li><a href="changesBrowser.html">Changes Browser</a></li>
+                    <li><a href="criticBrowser.html">Critic Browser Tutorial</a></li>
+                    <li><a href="changesBrowser.html">Changes Browser Tutorial</a></li>
                     <li><a href="team.html">Team</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -70,7 +70,7 @@
             <div class="container">
 
                 <div class="d-flex justify-content-between align-items-center">
-                    <h2>Critic Browser Videos</h2>
+                    <h2>Videos Tutorial</h2>
                     <ol>
                         <li><a href="index.html">Home</a></li>
                         <li>Critic Browser</li>
