--- a/team.html
+++ b/team.html
@@ -52,8 +52,8 @@
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Enhancements</a></li>
-                    <li><a href="criticBrowser.html">Critic Browser</a></li>
-                    <li><a href="changesBrowser.html">Changes Browser</a></li>
+                    <li><a href="criticBrowser.html">Critic Browser Tutorial</a></li>
+                    <li><a href="changesBrowser.html">Changes Browser Tutorial</a></li>
                     <li><a href="team.html">Team</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -149,9 +149,8 @@
                             <div class="member-img">
                                 <img src="assets/img/team/JuampiPic.jpg" class="img-fluid" alt="">
                                 <div class="social">
-                                    <a href=""><i class="bi bi-github"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
+                                    <a href="https://jpsandoval.github.io/"><i class="bi bi-github"></i></a>
+                                    <a href="https://www.facebook.com/juampiboy"><i class="bi bi-facebook"></i></a>
                                 </div>
                             </div>
                             <div class="member-info">
