--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Enhancements</a></li>
-                    <li><a href="criticBrowser/">Critic Browser</a></li>
-                    <li><a href="changesBrowser.html">Changes Browser</a></li>
+                    <li><a href="criticBrowser.html">Critic Browser Tutorial</a></li>
+                    <li><a href="changesBrowser.html">Changes Browser Tutorial</a></li>
                     <li><a href="team.html">Team</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -123,7 +123,7 @@
                                 title="CriticBrowser is a graphical tool that allows developers to select a list of software packages and a list of quality rules This resulting on a new list of critiques that broke the selected rules.">CriticBrowser</span>
                         </a> uses a deprecated version of <a href="https://github.com/pharo-spec/Spec" target="_blank"><span
                                 title="Spec is a framework in Pharo for describing user interfaces">Spec</span></a>. Therefore, implementing the new enhancements directly was not feasible without first migrating the CriticBrowser to the Spec2 version.
-                    I created my own repository to do the migrations as Pharo10 was in release at the moment; Because of this, 
+                    I created my own repository to do the migrations as Pharo10 was in release at the moment; Therefore, 
                     the last project goal was replaced by CriticBrowser migration. After these changes, the rest of project goals were done.
                 </p>
             </div>
