--- a/portfolio.html
+++ b/portfolio.html
@@ -52,8 +52,8 @@
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Enhancements</a></li>
-                    <li><a href="criticBrowser.html">Critic Browser</a></li>
-                    <li><a href="changesBrowser.html">Changes Browser</a></li>
+                    <li><a href="criticBrowser.html">Critic Browser Tutorial</a></li>
+                    <li><a href="changesBrowser.html">Changes Browser Tutorial</a></li>
                     <li><a href="team.html">Team</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
