--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </li>
                         <li><i class="bi bi-check"></i>Fixing the “automatically resolve this issue” option to follow a sequence from code selection for a better user experience.</li>
                         <li><i class="bi bi-check"></i>Enhancing code critiques global browser.</li>
-                        <li><i class="bi bi-x"></i>Building, test, and integrate profiles. The structure and classification will be coordinated with experienced users.</li>
+                        <li><i class="bi bi-x"></i>Building, testing and integrating profiles. The structure and classification will be coordinated with experienced users.</li>
                     </ul>
                 </div>
             </div>
