add url for program

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="logo">
                 <!-- <h1 class="text-light"><a href="index.html"><span>Google Summer Of Code 21</span></a></h1>-->
                 <!-- Uncomment below if you prefer to use an image logo -->
-                <a href="index.html"><img src="assets/img/logoG.png" alt="" class="img-fluid"></a>
+                <a href="https://summerofcode.withgoogle.com"><img src="assets/img/logoG.png" alt="" class="img-fluid"></a>
             </div>
 
             <nav id="navbar" class="navbar">
